--- a/.buildkite/pipelines/pull_request/kbn_handlebars.yml
+++ b/.buildkite/pipelines/pull_request/kbn_handlebars.yml
@@ -1,6 +1,6 @@
 steps:
   - command: .buildkite/scripts/steps/test/kbn_handlebars.sh
-    label: "Check @kbn/handlebars for upstream differences"
+    label: 'Check @kbn/handlebars for upstream differences'
     agents:
       machineType: n2-standard-2
       preemptible: true
@@ -10,5 +10,5 @@ steps:
     timeout_in_minutes: 5
     retry:
       automatic:
-        - exit_status: "*"
+        - exit_status: '*'
           limit: 1
