--- a/.buildkite/pipelines/pull_request/apm_cypress.yml
+++ b/.buildkite/pipelines/pull_request/apm_cypress.yml
@@ -1,6 +1,6 @@
 steps:
   - command: .buildkite/scripts/steps/functional/apm_cypress.sh
-    label: "APM Cypress Tests"
+    label: 'APM Cypress Tests'
     agents:
       machineType: n2-standard-4
       preemptible: true
@@ -11,7 +11,7 @@ steps:
     parallelism: 1 # TODO: Set parallelism when apm_cypress handles it
     retry:
       automatic:
-        - exit_status: "-1"
+        - exit_status: '-1'
           limit: 3
-        - exit_status: "*"
+        - exit_status: '*'
           limit: 1
