--- a/.buildkite/pipelines/pull_request/base.yml
+++ b/.buildkite/pipelines/pull_request/base.yml
@@ -17,11 +17,11 @@ steps:
     timeout_in_minutes: 60
     retry:
       automatic:
-        - exit_status: "-1"
+        - exit_status: '-1'
           limit: 3
 
   - command: .buildkite/scripts/steps/quick_checks.sh
-    label: "Quick Checks"
+    label: 'Quick Checks'
     agents:
       machineType: n2-standard-2
       preemptible: true
@@ -29,7 +29,7 @@ steps:
     timeout_in_minutes: 60
     retry:
       automatic:
-        - exit_status: "-1"
+        - exit_status: '-1'
           limit: 3
 
   - wait
@@ -44,25 +44,25 @@ steps:
       - build_api_docs
     retry:
       automatic:
-        - exit_status: "*"
+        - exit_status: '*'
           limit: 1
 
   - command: .buildkite/scripts/steps/test/pick_test_group_run_order.sh
-    label: "Pick Test Group Run Order"
+    label: 'Pick Test Group Run Order'
     agents:
       machineType: n2-standard-2
     timeout_in_minutes: 10
     env:
-      JEST_UNIT_SCRIPT: ".buildkite/scripts/steps/test/jest.sh"
-      JEST_INTEGRATION_SCRIPT: ".buildkite/scripts/steps/test/jest_integration.sh"
-      FTR_CONFIGS_SCRIPT: ".buildkite/scripts/steps/test/ftr_configs.sh"
+      JEST_UNIT_SCRIPT: '.buildkite/scripts/steps/test/jest.sh'
+      JEST_INTEGRATION_SCRIPT: '.buildkite/scripts/steps/test/jest_integration.sh'
+      FTR_CONFIGS_SCRIPT: '.buildkite/scripts/steps/test/ftr_configs.sh'
     retry:
       automatic:
-        - exit_status: "*"
+        - exit_status: '*'
           limit: 1
 
   - command: .buildkite/scripts/steps/lint.sh
-    label: "Linting"
+    label: 'Linting'
     agents:
       machineType: n2-standard-8
       preemptible: true
@@ -70,11 +70,11 @@ steps:
     timeout_in_minutes: 60
     retry:
       automatic:
-        - exit_status: "-1"
+        - exit_status: '-1'
           limit: 3
 
   - command: .buildkite/scripts/steps/check_types.sh
-    label: "Check Types"
+    label: 'Check Types'
     agents:
       machineType: n2-standard-4
       preemptible: true
@@ -82,11 +82,11 @@ steps:
     timeout_in_minutes: 70
     retry:
       automatic:
-        - exit_status: "-1"
+        - exit_status: '-1'
           limit: 3
 
   - command: .buildkite/scripts/steps/lint_with_types.sh
-    label: "Linting (with types)"
+    label: 'Linting (with types)'
     agents:
       machineType: n2-standard-16
       preemptible: true
@@ -94,11 +94,11 @@ steps:
     timeout_in_minutes: 90
     retry:
       automatic:
-        - exit_status: "-1"
+        - exit_status: '-1'
           limit: 3
 
   - command: .buildkite/scripts/steps/checks.sh
-    label: "Checks"
+    label: 'Checks'
     key: checks
     agents:
       machineType: n2-standard-2
@@ -106,11 +106,11 @@ steps:
     timeout_in_minutes: 60
     retry:
       automatic:
-        - exit_status: "-1"
+        - exit_status: '-1'
           limit: 3
 
   - command: .buildkite/scripts/steps/api_docs/build_api_docs.sh
-    label: "Build API Docs"
+    label: 'Build API Docs'
     agents:
       machineType: n2-standard-4
       preemptible: true
@@ -118,5 +118,5 @@ steps:
     timeout_in_minutes: 90
     retry:
       automatic:
-        - exit_status: "-1"
+        - exit_status: '-1'
           limit: 3
