--- a/.buildkite/pipelines/pull_request/build_project.yml
+++ b/.buildkite/pipelines/pull_request/build_project.yml
@@ -1,6 +1,6 @@
 steps:
   - command: .buildkite/scripts/steps/artifacts/docker_image.sh
-    label: "Build Project Image"
+    label: 'Build Project Image'
     agents:
       machineType: n2-standard-16
       preemptible: true
@@ -8,5 +8,5 @@ steps:
     soft_fail: true
     retry:
       automatic:
-        - exit_status: "-1"
+        - exit_status: '-1'
           limit: 3
