--- a/.buildkite/pipelines/pull_request/deploy_cloud.yml
+++ b/.buildkite/pipelines/pull_request/deploy_cloud.yml
@@ -1,6 +1,6 @@
 steps:
   - command: .buildkite/scripts/steps/cloud/build_and_deploy.sh
-    label: "Build and Deploy to Cloud"
+    label: 'Build and Deploy to Cloud'
     agents:
       machineType: n2-standard-2
       preemptible: true
@@ -11,5 +11,5 @@ steps:
     soft_fail: true
     retry:
       automatic:
-        - exit_status: "-1"
+        - exit_status: '-1'
           limit: 3
