--- a/.buildkite/pipelines/pull_request/deploy_project.yml
+++ b/.buildkite/pipelines/pull_request/deploy_project.yml
@@ -1,6 +1,6 @@
 steps:
   - command: .buildkite/scripts/steps/artifacts/docker_image.sh
-    label: "Build Project Image"
+    label: 'Build Project Image'
     key: build_project_image
     agents:
       machineType: n2-standard-16
@@ -9,10 +9,10 @@ steps:
     soft_fail: true
     retry:
       automatic:
-        - exit_status: "-1"
+        - exit_status: '-1'
           limit: 3
   - command: .buildkite/scripts/steps/serverless/deploy.sh
-    label: "Deploy Project"
+    label: 'Deploy Project'
     agents:
       machineType: n2-standard-4
       preemptible: true
