--- a/.buildkite/pipelines/pull_request/fips.yml
+++ b/.buildkite/pipelines/pull_request/fips.yml
@@ -1,6 +1,6 @@
 steps:
   - command: .buildkite/scripts/steps/fips/build.sh
-    label: "Build FIPS Image"
+    label: 'Build FIPS Image'
     agents:
       machineType: n2-standard-2
       preemptible: true
@@ -11,5 +11,5 @@ steps:
     soft_fail: true
     retry:
       automatic:
-        - exit_status: "-1"
+        - exit_status: '-1'
           limit: 3
