--- a/.buildkite/pipelines/pull_request/profiling_cypress.yml
+++ b/.buildkite/pipelines/pull_request/profiling_cypress.yml
@@ -1,6 +1,6 @@
 steps:
   - command: .buildkite/scripts/steps/functional/profiling_cypress.sh
-    label: "Profiling Cypress Tests"
+    label: 'Profiling Cypress Tests'
     agents:
       machineType: n2-standard-4
       preemptible: true
@@ -11,7 +11,7 @@ steps:
     parallelism: 2
     retry:
       automatic:
-        - exit_status: "-1"
+        - exit_status: '-1'
           limit: 3
-        - exit_status: "*"
+        - exit_status: '*'
           limit: 1
