--- a/.buildkite/pipelines/pull_request/response_ops.yml
+++ b/.buildkite/pipelines/pull_request/response_ops.yml
@@ -1,6 +1,6 @@
 steps:
   - command: .buildkite/scripts/steps/functional/response_ops.sh
-    label: "Rules, Alerts and Exceptions ResponseOps Cypress Tests on Security Solution"
+    label: 'Rules, Alerts and Exceptions ResponseOps Cypress Tests on Security Solution'
     agents:
       machineType: n2-standard-4
       preemptible: true
@@ -11,5 +11,5 @@ steps:
     parallelism: 9
     retry:
       automatic:
-        - exit_status: "*"
+        - exit_status: '*'
           limit: 1
