--- a/.buildkite/pipelines/pull_request/response_ops_cases.yml
+++ b/.buildkite/pipelines/pull_request/response_ops_cases.yml
@@ -1,6 +1,6 @@
 steps:
   - command: .buildkite/scripts/steps/functional/response_ops_cases.sh
-    label: "Cases Cypress Tests on Security Solution"
+    label: 'Cases Cypress Tests on Security Solution'
     agents:
       machineType: n2-standard-4
       preemptible: true
@@ -10,5 +10,5 @@ steps:
     timeout_in_minutes: 120
     retry:
       automatic:
-        - exit_status: "*"
+        - exit_status: '*'
           limit: 1
