--- a/.buildkite/pipelines/pull_request/security_solution/cypress_burn.yml
+++ b/.buildkite/pipelines/pull_request/security_solution/cypress_burn.yml
@@ -1,6 +1,6 @@
 steps:
   - command: .buildkite/scripts/steps/functional/defend_workflows_burn.sh
-    label: "[Soft fail] Defend Workflows Cypress Tests, burning changed specs"
+    label: '[Soft fail] Defend Workflows Cypress Tests, burning changed specs'
     agents:
       enableNestedVirtualization: true
       localSsds: 1
@@ -16,7 +16,7 @@ steps:
       automatic: false
 
   - command: .buildkite/scripts/steps/functional/defend_workflows_serverless_burn.sh
-    label: "[Soft fail] Defend Workflows Cypress Tests on Serverless, burning changed specs"
+    label: '[Soft fail] Defend Workflows Cypress Tests on Serverless, burning changed specs'
     agents:
       enableNestedVirtualization: true
       localSsds: 1
@@ -32,7 +32,7 @@ steps:
       automatic: false
 
   - command: .buildkite/scripts/steps/functional/security_solution_burn.sh
-    label: "[Soft fail] Security Solution Cypress tests, burning changed specs"
+    label: '[Soft fail] Security Solution Cypress tests, burning changed specs'
     agents:
       machineType: n2-standard-4
       preemptible: true
@@ -46,7 +46,7 @@ steps:
     soft_fail: true
 
   - command: .buildkite/scripts/steps/functional/osquery_cypress_burn.sh
-    label: "[Soft fail] Osquery Cypress Tests, burning changed specs"
+    label: '[Soft fail] Osquery Cypress Tests, burning changed specs'
     agents:
       machineType: n2-standard-4
       preemptible: true
