--- a/.buildkite/pipelines/pull_request/security_solution/defend_workflows.yml
+++ b/.buildkite/pipelines/pull_request/security_solution/defend_workflows.yml
@@ -1,6 +1,6 @@
 steps:
   - command: .buildkite/scripts/steps/functional/defend_workflows.sh
-    label: "Defend Workflows Cypress Tests"
+    label: 'Defend Workflows Cypress Tests'
     agents:
       enableNestedVirtualization: true
       localSsds: 1
@@ -13,11 +13,11 @@ steps:
     parallelism: 20
     retry:
       automatic:
-        - exit_status: "-1"
+        - exit_status: '-1'
           limit: 1
 
   - command: .buildkite/scripts/steps/functional/defend_workflows_serverless.sh
-    label: "Defend Workflows Cypress Tests on Serverless"
+    label: 'Defend Workflows Cypress Tests on Serverless'
     agents:
       enableNestedVirtualization: true
       localSsds: 1
@@ -30,7 +30,7 @@ steps:
     parallelism: 14
     retry:
       automatic:
-        - exit_status: "-1"
+        - exit_status: '-1'
           limit: 1
 #   status_exception: Native role management is not enabled in this Elasticsearch instance
 #  - command: .buildkite/scripts/steps/functional/security_serverless_defend_workflows.sh
