--- a/.buildkite/pipelines/pull_request/security_solution/explore.yml
+++ b/.buildkite/pipelines/pull_request/security_solution/explore.yml
@@ -1,6 +1,6 @@
 steps:
   - command: .buildkite/scripts/steps/functional/security_solution_explore.sh
-    label: "Explore - Security Solution Cypress Tests"
+    label: 'Explore - Security Solution Cypress Tests'
     agents:
       machineType: n2-standard-4
       preemptible: true
@@ -11,11 +11,11 @@ steps:
     parallelism: 2
     retry:
       automatic:
-        - exit_status: "-1"
+        - exit_status: '-1'
           limit: 1
 
   - command: .buildkite/scripts/steps/functional/security_serverless_explore.sh
-    label: "Serverless Explore - Security Solution Cypress Tests"
+    label: 'Serverless Explore - Security Solution Cypress Tests'
     agents:
       machineType: n2-standard-4
       preemptible: true
@@ -26,5 +26,5 @@ steps:
     parallelism: 2
     retry:
       automatic:
-        - exit_status: "-1"
+        - exit_status: '-1'
           limit: 1
