--- a/.buildkite/pipelines/pull_request/security_solution/investigations.yml
+++ b/.buildkite/pipelines/pull_request/security_solution/investigations.yml
@@ -1,6 +1,6 @@
 steps:
   - command: .buildkite/scripts/steps/functional/security_solution_investigations.sh
-    label: "Investigations - Security Solution Cypress Tests"
+    label: 'Investigations - Security Solution Cypress Tests'
     agents:
       machineType: n2-standard-4
       preemptible: true
@@ -11,11 +11,11 @@ steps:
     parallelism: 7
     retry:
       automatic:
-        - exit_status: "-1"
+        - exit_status: '-1'
           limit: 1
 
   - command: .buildkite/scripts/steps/functional/security_serverless_investigations.sh
-    label: "Serverless Investigations - Security Solution Cypress Tests"
+    label: 'Serverless Investigations - Security Solution Cypress Tests'
     agents:
       machineType: n2-standard-4
       preemptible: true
@@ -26,5 +26,5 @@ steps:
     parallelism: 8
     retry:
       automatic:
-        - exit_status: "-1"
+        - exit_status: '-1'
           limit: 1
