--- a/.buildkite/pipelines/pull_request/security_solution/osquery_cypress.yml
+++ b/.buildkite/pipelines/pull_request/security_solution/osquery_cypress.yml
@@ -1,6 +1,6 @@
 steps:
   - command: .buildkite/scripts/steps/functional/osquery_cypress.sh
-    label: "Osquery Cypress Tests"
+    label: 'Osquery Cypress Tests'
     agents:
       machineType: n2-standard-4
       preemptible: true
@@ -11,11 +11,11 @@ steps:
     parallelism: 8
     retry:
       automatic:
-        - exit_status: "-1"
+        - exit_status: '-1'
           limit: 1
 
   - command: .buildkite/scripts/steps/functional/security_serverless_osquery.sh
-    label: "Serverless Osquery Cypress Tests"
+    label: 'Serverless Osquery Cypress Tests'
     agents:
       machineType: n2-standard-4
       preemptible: true
@@ -26,5 +26,5 @@ steps:
     parallelism: 8
     retry:
       automatic:
-        - exit_status: "-1"
+        - exit_status: '-1'
           limit: 1
