--- a/.buildkite/pipelines/pull_request/security_solution/threat_intelligence.yml
+++ b/.buildkite/pipelines/pull_request/security_solution/threat_intelligence.yml
@@ -1,6 +1,6 @@
 steps:
   - command: .buildkite/scripts/steps/functional/threat_intelligence.sh
-    label: "Threat Intelligence Cypress Tests"
+    label: 'Threat Intelligence Cypress Tests'
     agents:
       machineType: n2-standard-4
       preemptible: true
@@ -11,5 +11,5 @@ steps:
     parallelism: 1
     retry:
       automatic:
-        - exit_status: "-1"
+        - exit_status: '-1'
           limit: 1
