--- a/.buildkite/pipelines/pull_request/slo_plugin_e2e.yml
+++ b/.buildkite/pipelines/pull_request/slo_plugin_e2e.yml
@@ -1,6 +1,6 @@
 steps:
   - command: .buildkite/scripts/steps/functional/slo_plugin_e2e.sh
-    label: "SLO Plugin @elastic/synthetics Tests"
+    label: 'SLO Plugin @elastic/synthetics Tests'
     agents:
       machineType: n2-standard-4
       preemptible: true
@@ -9,10 +9,10 @@ steps:
       - quick_checks
     timeout_in_minutes: 30
     artifact_paths:
-      - "x-pack/plugins/observability_solution/slo/e2e/.journeys/**/*"
+      - 'x-pack/plugins/observability_solution/slo/e2e/.journeys/**/*'
     retry:
       automatic:
-        - exit_status: "-1"
+        - exit_status: '-1'
           limit: 3
-        - exit_status: "*"
+        - exit_status: '*'
           limit: 1
