--- a/.buildkite/pipelines/pull_request/storybooks.yml
+++ b/.buildkite/pipelines/pull_request/storybooks.yml
@@ -1,6 +1,6 @@
 steps:
   - command: .buildkite/scripts/steps/storybooks/build_and_upload.sh
-    label: "Build Storybooks"
+    label: 'Build Storybooks'
     agents:
       machineType: n2-standard-8
       preemptible: true
