--- a/.buildkite/pipelines/pull_request/uptime_plugin.yml
+++ b/.buildkite/pipelines/pull_request/uptime_plugin.yml
@@ -1,6 +1,6 @@
 steps:
   - command: .buildkite/scripts/steps/functional/uptime_plugin.sh
-    label: "Uptime @elastic/synthetics Tests"
+    label: 'Uptime @elastic/synthetics Tests'
     agents:
       machineType: n2-standard-4
       preemptible: true
@@ -9,10 +9,10 @@ steps:
       - quick_checks
     timeout_in_minutes: 60
     artifact_paths:
-      - "x-pack/plugins/observability_solution/synthetics/e2e/.journeys/**/*"
+      - 'x-pack/plugins/observability_solution/synthetics/e2e/.journeys/**/*'
     retry:
       automatic:
-        - exit_status: "-1"
+        - exit_status: '-1'
           limit: 3
-        - exit_status: "*"
+        - exit_status: '*'
           limit: 1
