--- a/.buildkite/pipelines/pull_request/webpack_bundle_analyzer.yml
+++ b/.buildkite/pipelines/pull_request/webpack_bundle_analyzer.yml
@@ -1,6 +1,6 @@
 steps:
   - command: .buildkite/scripts/steps/webpack_bundle_analyzer/build_and_upload.sh
-    label: "Build Webpack Bundle Analyzer reports"
+    label: 'Build Webpack Bundle Analyzer reports'
     agents:
       machineType: n2-standard-4
       preemptible: true
