[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/packages/kbn-capture-oas-snapshot-cli/tsconfig.json
+++ b/packages/kbn-capture-oas-snapshot-cli/tsconfig.json
@@ -15,12 +15,11 @@
   ],
   "kbn_references": [
     "@kbn/repo-info",
-    "@kbn/some-dev-log",
-    "@kbn/stdio-dev-helpers",
     "@kbn/core-test-helpers-kbn-server",
     "@kbn/safer-lodash-set",
     "@kbn/core-plugins-server-internal",
     "@kbn/dev-cli-runner",
     "@kbn/test",
+    "@kbn/dev-utils",
   ]
 }
