--- a/packages/kbn-capture-oas-snapshot-cli/tsconfig.json
+++ b/packages/kbn-capture-oas-snapshot-cli/tsconfig.json
@@ -14,19 +14,12 @@
     "target/**/*"
   ],
   "kbn_references": [
-    "@kbn/some-dev-log",
-    "@kbn/dev-cli-errors",
-    "@kbn/core-saved-objects-base-server-internal",
+    "@kbn/repo-info",
     "@kbn/core-test-helpers-kbn-server",
+    "@kbn/safer-lodash-set",
     "@kbn/core-plugins-server-internal",
-    "@kbn/core-saved-objects-migration-server-internal",
     "@kbn/dev-cli-runner",
     "@kbn/test",
-    "@kbn/core-elasticsearch-client-server-mocks",
-    "@kbn/safer-lodash-set",
-    "@kbn/tooling-log",
-    "@kbn/core-saved-objects-server",
-    "@kbn/utils",
     "@kbn/dev-utils",
   ]
 }
