--- a/x-pack/plugins/integration_assistant/kibana.jsonc
+++ b/x-pack/plugins/integration_assistant/kibana.jsonc
@@ -12,6 +12,7 @@
       "integration_assistant"
     ],
     "requiredPlugins": [
+      "actions",
       "licensing",
       "management",
       "features",
