--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
   "resolutions": {
     "**/@bazel/typescript/protobufjs": "6.11.4",
     "**/@hello-pangea/dnd": "16.6.0",
-    "**/@langchain/core": "0.2.0",
+    "**/@langchain/core": "0.2.3",
     "**/@types/node": "20.10.5",
     "**/@typescript-eslint/utils": "5.62.0",
     "**/chokidar": "^3.5.3",
@@ -916,10 +916,10 @@
     "@kbn/watcher-plugin": "link:x-pack/plugins/watcher",
     "@kbn/xstate-utils": "link:packages/kbn-xstate-utils",
     "@kbn/zod-helpers": "link:packages/kbn-zod-helpers",
-    "@langchain/community": "^0.2.2",
-    "@langchain/core": "^0.2.0",
-    "@langchain/langgraph": "^0.0.20",
-    "@langchain/openai": "^0.0.33",
+    "@langchain/community": "^0.2.4",
+    "@langchain/core": "0.2.3",
+    "@langchain/langgraph": "^0.0.21",
+    "@langchain/openai": "^0.0.34",
     "@loaders.gl/core": "^3.4.7",
     "@loaders.gl/json": "^3.4.7",
     "@loaders.gl/shapefile": "^3.4.7",
@@ -939,10 +939,10 @@
     "@reduxjs/toolkit": "1.9.7",
     "@slack/webhook": "^7.0.1",
     "@smithy/eventstream-codec": "^3.0.0",
-    "@smithy/eventstream-serde-node": "^2.1.1",
+    "@smithy/eventstream-serde-node": "^3.0.0",
     "@smithy/protocol-http": "^4.0.0",
     "@smithy/signature-v4": "^3.0.0",
-    "@smithy/types": "^2.9.1",
+    "@smithy/types": "^3.0.0",
     "@smithy/util-utf8": "^3.0.0",
     "@tanstack/react-query": "^4.29.12",
     "@tanstack/react-query-devtools": "^4.29.12",
@@ -1058,8 +1058,8 @@
     "jsonwebtoken": "^9.0.2",
     "jsts": "^1.6.2",
     "kea": "^2.6.0",
-    "langchain": "^0.2.2",
-    "langsmith": "^0.1.28",
+    "langchain": "0.2.3",
+    "langsmith": "^0.1.30",
     "launchdarkly-js-client-sdk": "^3.1.4",
     "launchdarkly-node-server-sdk": "^7.0.3",
     "load-json-file": "^6.2.0",
