[Fleet] Add API integration to inputs endpoint (#184435)

--- a/x-pack/plugins/fleet/common/openapi/bundled.yaml
+++ b/x-pack/plugins/fleet/common/openapi/bundled.yaml
@@ -1026,6 +1026,11 @@ paths:
         name: prerelease
         description: Specify if version is prerelease
         in: query
+      - schema:
+          type: boolean
+        name: ignoreUnverified
+        description: Ignore if the package is fails signature verification
+        in: query
   /agents/setup:
     get:
       summary: Get agent setup info
