add /internal/entities/enablemnent API for getting and setting encrypted API keys for managing entity discovery

--- a/x-pack/plugins/observability_solution/asset_manager/kibana.jsonc
+++ b/x-pack/plugins/observability_solution/asset_manager/kibana.jsonc
@@ -13,7 +13,9 @@
     ],
     "requiredPlugins": [
       "apmDataAccess",
-      "metricsDataAccess"
+      "metricsDataAccess",
+      "security",
+      "encryptedSavedObjects",
     ],
     "browser": true,
     "server": true,
