--- a/x-pack/plugins/observability_solution/asset_manager/tsconfig.json
+++ b/x-pack/plugins/observability_solution/asset_manager/tsconfig.json
@@ -29,6 +29,8 @@
     "@kbn/core-saved-objects-api-server-mocks",
     "@kbn/entities-schema",
     "@kbn/es-query",
-    "@kbn/zod-helpers"
+    "@kbn/zod-helpers",
+    "@kbn/security-plugin",
+    "@kbn/encrypted-saved-objects-plugin",
   ]
 }
