Migrates to LangSmith and adds KB Tools

--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
   "resolutions": {
     "**/@bazel/typescript/protobufjs": "6.11.4",
     "**/@hello-pangea/dnd": "16.6.0",
-    "**/@langchain/core": "0.1.53",
+    "**/@langchain/core": "0.2.0",
     "**/@types/node": "20.10.5",
     "**/@typescript-eslint/utils": "5.62.0",
     "**/chokidar": "^3.5.3",
@@ -913,9 +913,10 @@
     "@kbn/watcher-plugin": "link:x-pack/plugins/watcher",
     "@kbn/xstate-utils": "link:packages/kbn-xstate-utils",
     "@kbn/zod-helpers": "link:packages/kbn-zod-helpers",
-    "@langchain/community": "^0.0.44",
-    "@langchain/core": "^0.1.53",
-    "@langchain/openai": "^0.0.25",
+    "@langchain/community": "^0.2.2",
+    "@langchain/core": "^0.2.0",
+    "@langchain/langgraph": "^0.0.20",
+    "@langchain/openai": "^0.0.33",
     "@loaders.gl/core": "^3.4.7",
     "@loaders.gl/json": "^3.4.7",
     "@loaders.gl/shapefile": "^3.4.7",
@@ -1052,8 +1053,8 @@
     "jsonwebtoken": "^9.0.2",
     "jsts": "^1.6.2",
     "kea": "^2.6.0",
-    "langchain": "^0.1.30",
-    "langsmith": "^0.1.14",
+    "langchain": "^0.2.2",
+    "langsmith": "^0.1.28",
     "launchdarkly-js-client-sdk": "^3.1.4",
     "launchdarkly-node-server-sdk": "^7.0.3",
     "load-json-file": "^6.2.0",
