--- a/x-pack/plugins/cloud_security_posture/tsconfig.json
+++ b/x-pack/plugins/cloud_security_posture/tsconfig.json
@@ -64,8 +64,7 @@
     "@kbn/code-editor",
     "@kbn/code-editor-mock",
     "@kbn/search-types",
-    "@kbn/react-kibana-mount",
-    "@kbn/core-lifecycle-browser"
+    "@kbn/react-kibana-mount"
   ],
   "exclude": ["target/**/*"]
 }
