--- a/x-pack/plugins/observability_solution/observability_ai_assistant_app/tsconfig.json
+++ b/x-pack/plugins/observability_solution/observability_ai_assistant_app/tsconfig.json
@@ -69,7 +69,7 @@
     "@kbn/task-manager-plugin",
     "@kbn/cloud-plugin",
     "@kbn/observability-plugin",
-    "@kbn/esql-datatable",
+    "@kbn/esql-datagrid",
     "@kbn/alerting-comparators"
   ],
   "exclude": ["target/**/*"]
