--- a/src/plugins/esql_datagrid/package.json
+++ b/src/plugins/esql_datagrid/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kbn/esql-datatable",
+  "name": "@kbn/esql-datagrid",
   "private": true,
   "version": "1.0.0",
   "license": "SSPL-1.0 OR Elastic License 2.0"
