removing the public folder and disable UI, will provide in separate PR

--- a/x-pack/plugins/integration_assistant/kibana.jsonc
+++ b/x-pack/plugins/integration_assistant/kibana.jsonc
@@ -6,7 +6,7 @@
   "plugin": {
     "id": "integrationAssistant",
     "server": true,
-    "browser": true,
+    "browser": false,
     "configPath": [
       "xpack",
       "integration_assistant"
