--- a/x-pack/plugins/observability_solution/dataset_quality/kibana.jsonc
+++ b/x-pack/plugins/observability_solution/dataset_quality/kibana.jsonc
@@ -25,7 +25,7 @@
       "lens"
     ],
     "optionalPlugins": [],
-    "requiredBundles": ["unifiedHistogram", "discover"],
+    "requiredBundles": ["unifiedHistogram"],
     "extraPublicDirs": [
       "common"
     ]
