[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/x-pack/plugins/integration_assistant/tsconfig.json
+++ b/x-pack/plugins/integration_assistant/tsconfig.json
@@ -15,7 +15,9 @@
   ],
   "kbn_references": [
     "@kbn/core",
-    "@kbn/core-http-browser",
     "@kbn/config-schema",
+    "@kbn/langchain",
+    "@kbn/core-elasticsearch-server",
+    "@kbn/actions-plugin",
   ]
 }
