Move DI service implementation to the common package

--- a/src/core/packages/di/server-mocks/tsconfig.json
+++ b/src/core/packages/di/server-mocks/tsconfig.json
@@ -14,8 +14,8 @@
     "target/**/*"
   ],
   "kbn_references": [
-    "@kbn/core-di-server",
-    "@kbn/core-di-server-internal",
+    "@kbn/core-di-common",
+    "@kbn/core-di-common-internal",
     "@kbn/utility-types",
   ]
 }
