--- a/x-pack/plugins/observability_solution/slo/tsconfig.json
+++ b/x-pack/plugins/observability_solution/slo/tsconfig.json
@@ -96,6 +96,8 @@
     "@kbn/code-editor",
     "@kbn/react-kibana-context-render",
     "@kbn/core-application-browser",
-    "@kbn/core-theme-browser"
+    "@kbn/core-theme-browser",
+    "@kbn/investigate-plugin",
+    "@kbn/shared-ux-utility"
   ]
 }
