Added dataQuality locator and re-enabling navigation from observability logs explorer

--- a/x-pack/plugins/observability_solution/observability_logs_explorer/kibana.jsonc
+++ b/x-pack/plugins/observability_solution/observability_logs_explorer/kibana.jsonc
@@ -32,7 +32,8 @@
     ],
     "requiredBundles": [
       "kibanaReact",
-      "triggersActionsUi"
+      "triggersActionsUi",
+      "dataQuality"
     ],
     "extraPublicDirs": [
       "common",
