[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/x-pack/plugins/data_quality/tsconfig.json
+++ b/x-pack/plugins/data_quality/tsconfig.json
@@ -24,6 +24,10 @@
     "@kbn/i18n-react",
     "@kbn/core-chrome-browser",
     "@kbn/features-plugin",
+    "@kbn/share-plugin",
+    "@kbn/deeplinks-observability",
+    "@kbn/utility-types",
+    "@kbn/deeplinks-management",
   ],
   "exclude": ["target/**/*"]
 }
