--- a/x-pack/plugins/actions/tsconfig.json
+++ b/x-pack/plugins/actions/tsconfig.json
@@ -47,8 +47,7 @@
     "@kbn/core-http-server",
     "@kbn/core-test-helpers-kbn-server",
     "@kbn/security-plugin-types-server",
-    "@kbn/core-application-common",
-    "@kbn/alerting-plugin"
+    "@kbn/core-application-common"
   ],
   "exclude": [
     "target/**/*",
