--- a/x-pack/plugins/observability_solution/observability_logs_explorer/kibana.jsonc
+++ b/x-pack/plugins/observability_solution/observability_logs_explorer/kibana.jsonc
@@ -32,8 +32,7 @@
     ],
     "requiredBundles": [
       "kibanaReact",
-      "triggersActionsUi",
-      "dataQuality"
+      "triggersActionsUi"
     ],
     "extraPublicDirs": [
       "common",
