--- a/x-pack/plugins/observability_solution/investigate_app/kibana.jsonc
+++ b/x-pack/plugins/observability_solution/investigate_app/kibana.jsonc
@@ -26,6 +26,8 @@
       "kibanaReact",
       "kibanaUtils",
       "textBasedLanguages",
+      "esqlDataGrid",
+      "observability"
     ],
     "optionalPlugins": [],
     "extraPublicDirs": []
