--- a/x-pack/plugins/observability_solution/observability/kibana.jsonc
+++ b/x-pack/plugins/observability_solution/observability/kibana.jsonc
@@ -51,6 +51,7 @@
       "serverless",
       "guidedOnboarding",
       "observabilityAIAssistant",
+      "investigate"
     ],
     "requiredBundles": [
       "data",
@@ -59,6 +60,7 @@
       "unifiedSearch",
       "stackAlerts",
       "spaces",
+      "investigate"
     ],
     "extraPublicDirs": [
       "common"
