--- a/x-pack/plugins/index_management/tsconfig.json
+++ b/x-pack/plugins/index_management/tsconfig.json
@@ -49,9 +49,9 @@
     "@kbn/utility-types",
     "@kbn/inference_integration_flyout",
     "@kbn/ml-plugin",
-    "@kbn/ml-error-utils",
     "@kbn/react-kibana-context-render",
-    "@kbn/react-kibana-mount"
+    "@kbn/react-kibana-mount",
+    "@kbn/core-notifications-browser"
   ],
   "exclude": ["target/**/*"]
 }
