--- a/packages/kbn-alerts-ui-shared/tsconfig.json
+++ b/packages/kbn-alerts-ui-shared/tsconfig.json
@@ -37,5 +37,8 @@
     "@kbn/core-doc-links-browser",
     "@kbn/charts-plugin",
     "@kbn/data-plugin",
+    "@kbn/search-types",
+    "@kbn/grouping",
+    "@kbn/alerts-grouping",
   ]
 }
