--- a/x-pack/plugins/ingest_pipelines/tsconfig.json
+++ b/x-pack/plugins/ingest_pipelines/tsconfig.json
@@ -34,7 +34,8 @@
     "@kbn/react-kibana-context-render",
     "@kbn/console-plugin",
     "@kbn/react-kibana-context-theme",
-    "@kbn/unsaved-changes-prompt"
+    "@kbn/unsaved-changes-prompt",
+    "@kbn/core-http-browser-mocks"
   ],
   "exclude": [
     "target/**/*",
