Add Dependency Injection support on the browser side

--- a/src/core/packages/root/browser-internal/tsconfig.json
+++ b/src/core/packages/root/browser-internal/tsconfig.json
@@ -72,6 +72,7 @@
     "@kbn/react-mute-legacy-root-warning",
     "@kbn/core-pricing-browser-internal",
     "@kbn/core-pricing-browser-mocks",
+    "@kbn/core-di-common-internal",
   ],
   "exclude": [
     "target/**/*",
