--- a/x-pack/plugins/observability_solution/dataset_quality/tsconfig.json
+++ b/x-pack/plugins/observability_solution/dataset_quality/tsconfig.json
@@ -47,7 +47,7 @@
     "@kbn/core-elasticsearch-server",
     "@kbn/ui-actions-plugin",
     "@kbn/metrics-data-access-plugin",
-    "@kbn/calculate-auto"
+    "@kbn/calculate-auto",
     "@kbn/discover-plugin",
     "@kbn/shared-ux-prompt-no-data-views-types"
   ],
