WIP Visualize Editor refactor

--- a/src/plugins/visualizations/kibana.jsonc
+++ b/src/plugins/visualizations/kibana.jsonc
@@ -26,7 +26,7 @@
       "savedObjectsFinder",
       "savedObjectsManagement",
       "savedSearch",
-      "contentManagement",
+      "contentManagement"
     ],
     "optionalPlugins": [
       "home",
@@ -36,12 +36,7 @@
       "serverless",
       "noDataPage"
     ],
-    "requiredBundles": [
-      "kibanaUtils",
-      "kibanaReact",
-      "charts",
-      "savedObjects",
-    ],
+    "requiredBundles": ["kibanaUtils", "kibanaReact", "charts", "savedObjects", "visDefaultEditor"],
     "extraPublicDirs": [
       "common/constants",
       "common/utils",
