--- a/packages/kbn-text-based-editor/package.json
+++ b/packages/kbn-text-based-editor/package.json
@@ -7,8 +7,8 @@
     "*.scss"
   ],
   "scripts": {
-    "make:docs:esql": "ts-node --transpileOnly scripts/generate_esql_docs.ts",
-    "postmake:docs:esql": "yarn run lint:fix",
+    "make:docs": "ts-node --transpileOnly scripts/generate_esql_docs.ts",
+    "postmake:docs": "yarn run lint:fix",
     "lint:fix": "cd ../.. && node ./scripts/eslint --fix ./packages/kbn-text-based-editor/src/esql_documentation_sections.tsx"
   }
 }
