--- a/packages/core/saved-objects/docs/openapi/paths/s@{spaceid}@api@saved_objects@_import.yaml
+++ b/packages/core/saved-objects/docs/openapi/paths/s@{spaceid}@api@saved_objects@_import.yaml
@@ -1,6 +1,6 @@
 post:
   summary: Create sets of Kibana saved objects from a file created by the export API.
-  operationId: importSavedObjectsDefaultSpace
+  operationId: importSavedObjects
   description: |
     Saved objects can be imported only into the same version, a newer minor on the same major, or the next major. Exported saved objects are not backwards compatible and cannot be imported into an older version of Kibana.
 
@@ -9,6 +9,7 @@ post:
     - saved objects
   parameters:
     - $ref: '../components/headers/kbn_xsrf.yaml'
+    - $ref: '../components/parameters/space_id.yaml'
     - $ref: '../components/parameters/compatibility_mode.yaml'
     - $ref: '../components/parameters/create_new_copies.yaml'
     - $ref: '../components/parameters/overwrite.yaml'
