Lint operation summaries

--- a/packages/core/saved-objects/docs/openapi/bundled.yaml
+++ b/packages/core/saved-objects/docs/openapi/bundled.yaml
@@ -252,10 +252,10 @@ paths:
                 $ref: '#/components/schemas/400_response'
   /api/saved_objects/_export:
     post:
-      summary: Retrieve sets of saved objects that you want to import into Kibana.
+      summary: Export saved objects
       operationId: exportSavedObjectsDefaultSpace
       description: |
-
+        Retrieve sets of saved objects that you want to import into Kibana.
         You must include `type` or `objects` in the request body.
 
         NOTE: The `savedObjects.maxImportExportSize` configuration setting limits the number of saved objects which may be exported.
@@ -394,9 +394,10 @@ paths:
                 $ref: '#/components/schemas/400_response'
   /api/saved_objects/_import:
     post:
-      summary: Create sets of Kibana saved objects from a file created by the export API.
+      summary: Import saved objects
       operationId: importSavedObjectsDefaultSpace
       description: |
+        Creates sets of Kibana saved objects from a file created by the export API.
         Saved objects can be imported only into the same version, a newer minor on the same major, or the next major. Exported saved objects are not backwards compatible and cannot be imported into an older version of Kibana.
 
         This functionality is in technical preview and may be changed or removed in a future release. Elastic will work to fix any issues, but features in technical preview are not subject to the support SLA of official GA features.
@@ -726,10 +727,10 @@ paths:
                 $ref: '#/components/schemas/400_response'
   /s/{spaceId}/api/saved_objects/_export:
     post:
-      summary: Retrieve sets of saved objects that you want to import into Kibana.
+      summary: Export saved objects
       operationId: exportSavedObjects
       description: |
-
+        Retrieves sets of saved objects that you want to import into Kibana.
         You must include `type` or `objects` in the request body.
 
         NOTE: The `savedObjects.maxImportExportSize` configuration setting limits the number of saved objects which may be exported.
@@ -768,9 +769,10 @@ paths:
                 $ref: '#/components/schemas/400_response'
   /s/{spaceId}/api/saved_objects/_import:
     post:
-      summary: Create sets of Kibana saved objects from a file created by the export API.
+      summary: Import saved objects
       operationId: importSavedObjects
       description: |
+        Creates sets of Kibana saved objects from a file created by the export API.
         Saved objects can be imported only into the same version, a newer minor on the same major, or the next major. Exported saved objects are not backwards compatible and cannot be imported into an older version of Kibana.
 
         This functionality is in technical preview and may be changed or removed in a future release. Elastic will work to fix any issues, but features in technical preview are not subject to the support SLA of official GA features.
