--- a/packages/core/saved-objects/docs/openapi/paths/api@saved_objects@_export.yaml
+++ b/packages/core/saved-objects/docs/openapi/paths/api@saved_objects@_export.yaml
@@ -1,8 +1,8 @@
 post:
-  summary: Retrieve sets of saved objects that you want to import into Kibana.
+  summary: Export saved objects
   operationId: exportSavedObjectsDefaultSpace
   description: |
-
+    Retrieve sets of saved objects that you want to import into Kibana.
     You must include `type` or `objects` in the request body.
 
     NOTE: The `savedObjects.maxImportExportSize` configuration setting limits the number of saved objects which may be exported.
