--- a/packages/core/saved-objects/docs/openapi/bundled_serverless.yaml
+++ b/packages/core/saved-objects/docs/openapi/bundled_serverless.yaml
@@ -18,7 +18,7 @@ tags:
 paths:
   /api/saved_objects/_export:
     post:
-      summary: Export saved objects
+      summary: Export saved objects in default space
       operationId: exportSavedObjectsDefaultSpace
       description: |
         Retrieve sets of saved objects that you want to import into Kibana.
@@ -59,7 +59,7 @@ paths:
                 $ref: '#/components/schemas/400_response'
   /api/saved_objects/_import:
     post:
-      summary: Import saved objects
+      summary: Import saved objects in default space
       operationId: importSavedObjectsDefaultSpace
       description: |
         Creates sets of Kibana saved objects from a file created by the export API.
