--- a/packages/core/saved-objects/docs/openapi/paths/api@saved_objects@_export.yaml
+++ b/packages/core/saved-objects/docs/openapi/paths/api@saved_objects@_export.yaml
@@ -1,5 +1,5 @@
 post:
-  summary: Export saved objects
+  summary: Export saved objects in default space
   operationId: exportSavedObjectsDefaultSpace
   description: |
     Retrieve sets of saved objects that you want to import into Kibana.
