Primes initial context with required kb docs and updates kb retrieval to use kbDataClient instead of esStore

--- a/package.json
+++ b/package.json
@@ -920,7 +920,7 @@
     "@kbn/xstate-utils": "link:packages/kbn-xstate-utils",
     "@kbn/zod-helpers": "link:packages/kbn-zod-helpers",
     "@langchain/community": "^0.2.4",
-    "@langchain/core": "^0.2.3",
+    "@langchain/core": "0.2.3",
     "@langchain/langgraph": "^0.0.21",
     "@langchain/openai": "^0.0.34",
     "@langtrase/trace-attributes": "^3.0.8",
@@ -1057,7 +1057,7 @@
     "jsonwebtoken": "^9.0.2",
     "jsts": "^1.6.2",
     "kea": "^2.6.0",
-    "langchain": "^0.2.3",
+    "langchain": "0.2.3",
     "langsmith": "^0.1.30",
     "launchdarkly-js-client-sdk": "^3.1.4",
     "launchdarkly-node-server-sdk": "^7.0.3",
