--- a/.buildkite/pipelines/pull_request/security_solution/defend_workflows.yml
+++ b/.buildkite/pipelines/pull_request/security_solution/defend_workflows.yml
@@ -3,7 +3,7 @@ steps:
     label: 'Defend Workflows Cypress Tests'
     agents:
       image: family/kibana-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       enableNestedVirtualization: true
       localSsds: 1
@@ -23,7 +23,7 @@ steps:
     label: 'Defend Workflows Cypress Tests on Serverless'
     agents:
       image: family/kibana-ubuntu-2004
-      imageProject: elastic-images-prod
+      imageProject: elastic-images-qa
       provider: gcp
       enableNestedVirtualization: true
       localSsds: 1
@@ -44,7 +44,7 @@ steps:
 #    label: 'Serverless Security Defend Workflows Cypress Tests'
 #    agents:
 #      image: family/kibana-ubuntu-2004
-#      imageProject: elastic-images-prod
+#      imageProject: elastic-images-qa
 #      provider: gcp
 #      machineType: n2-standard-4
 #      preemptible: true
