Add browser-side core plugin modules

--- a/src/core/packages/plugins/browser-internal/tsconfig.json
+++ b/src/core/packages/plugins/browser-internal/tsconfig.json
@@ -39,6 +39,8 @@
     "@kbn/core-plugins-contracts-browser",
     "@kbn/core-security-browser-mocks",
     "@kbn/core-user-profile-browser-mocks",
+    "@kbn/core-di-common",
+    "@kbn/core-di-common-internal",
   ],
   "exclude": [
     "target/**/*",
